--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Kottans DOM</title>
   </head>
   <body>
+    <main class="wrapper">
+      <aside class="side-menu">
+        <ul class="list"></ul>
+      </aside>
+      <div class="content"></div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
